--- a/login.css
+++ b/login.css
@@ -1,98 +1,71 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
 }
-
-#loginsec {
-    width: 100%;
-    height: 100%;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     background: url(../sunset.jpg) no-repeat center center/cover;
-    position: absolute;
 }
-
-.maindiv {
-    text-align: center;
-    margin-top: 60px;
-    background-color: transparent;
-    margin-left: 600px;
-    margin-right: 600px;
-    color: aliceblue;
+.form-container {
+    background: rgba(255, 255, 255, 0.1);
     padding: 40px;
     border-radius: 10px;
-    border: 1px solid white;
-    backdrop-filter: blur(3px);
-    padding: 80px 25px;
+    backdrop-filter: blur(5px);
+    text-align: center;
+    color: white;
+    width: 300px;
 }
-
-.errornm {
-    height: 20px;
+.form-header {
+    margin-bottom: 20px;
+    font-size: 24px;
 }
-
-span {
-    display: flex;
-    justify-content: left;
+.input-box {
+    margin-bottom: 15px;
+    text-align: left;
 }
-
-label {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-bottom: 10px;
+.input-box label {
+    display: block;
+    margin-bottom: 5px;
 }
-
-.loginhead {
-  
-}
-.Uline{
-    height: 3px;
-    width: 50px;
-    background-color: purple;
-    margin-left: 120px;
-    margin-top:  2px;
-}
-.space{
-    margin-bottom: 40px;
-}
-
-.inputbox input {
-    position: relative;
+.input-box input {
     width: 100%;
-    outline: none;
-    font-size: 16px;
-    color: aliceblue;
-    letter-spacing: 1px;
+    padding: 10px;
     border: none;
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid white;
     background: transparent;
+    color: white;
 }
-
-.inputtext {
-    float: left;
+.input-box input:focus {
+    outline: none;
+    border-bottom-color: lightblue;
 }
-
-.signupbtn {
-    margin-top: 7px;
-    padding: 4px 20px;
-    margin: 20px;
-    font-size: 14px;
-    background-color: transparent;
+.error-message {
+    color: red;
+    font-size: 12px;
+    height: 14px;
+}
+.action-btn {
+    width: 100%;
+    padding: 10px;
+    background-color: purple;
+    border: none;
     border-radius: 5px;
-    border: 1px solid rgb(139, 15, 161);
-    color: #fff;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
     cursor: pointer;
 }
-
-.loginbtn {
+.action-btn:hover {
+    background-color: darkviolet;
+}
+.toggle-form {
     margin-top: 10px;
-    padding: 4px 20px;
-    font-size: 14px;
-    background-color: transparent;
-    border-radius: 5px;
-    border: 1px solid rgb(139, 15, 161);
-    color: #fff;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     cursor: pointer;
 }
-
-.btnspc #disable {
-    background-color: rgb(139, 15, 161); 
+.toggle-form span {
+    color: lightblue;
+    text-decoration: underline;
 }
